sunRise,sunset & aqi text  from api added

--- a/src/Components/Animation/loadingCSS.css
+++ b/src/Components/Animation/loadingCSS.css
@@ -23,7 +23,56 @@
     width: 100%;
   }
   
- 
+  .spinner-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .container {
+    width: var(--size);
+    border-radius: var(--radius);
+    aspect-ratio: 1;
+    position: relative;
+  }
+  
+  .dot {
+    --size: 1em;
+    --degrees: 0deg;
+    aspect-ratio: 1;
+    position: absolute;
+    border-radius: var(--radius);
+    width: var(--size);
+    background-color: #1d1d1d;
+    opacity: 0;
+    top: calc(var(--size) / 2);
+    left: calc(var(--size) / 2);
+    animation: animate-in;
+    animation-duration: 900ms;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: alternate;
+    animation-iteration-count: infinite;
+  }
+  
+  .rect {
+    --size: 1em;
+    --degrees: 0deg;
+    position: absolute;
+    width: var(--size);
+    aspect-ratio: 4/1;
+    top: calc(var(--size) / 2);
+    left: calc(var(--size) / 2);
+    background-color: #1d1d1d;
+    border-radius: 20px;
+    opacity: 0;
+    animation: animate-in;
+    animation-duration: 800ms;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: alternate;
+    animation-iteration-count: infinite;
+  }
+  
+  
   
   .comet-spinner {
     --radius: 3em;
